<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login" 
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/blue"
            android:layout_marginTop="3dip"
            android:layout_marginBottom="3dip"/>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="20dip"
                android:text="@string/prompt_username"
                   />

            <EditText
                android:id="@+id/usernameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:singleLine="true"
                android:background="@drawable/edit_text" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="20dip"
                android:text="@string/prompt_password" />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:singleLine="true"
                style="@android:style/Widget.EditText"
                android:background="@drawable/edit_text"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2"
        android:layout_marginTop="10dip">
        <TableRow>
	        <TextView
	            android:layout_width="80dip"
	            android:layout_height="wrap_content"/>
	        <Button android:id="@+id/loginBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_login"
	            android:background="@drawable/button"/>
	        <Button android:id="@+id/registerBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_register"
	            android:background="@drawable/button"
	            android:layout_marginLeft="10dip"/>
	        <TextView
	            android:layout_width="80dip"
	            android:layout_height="wrap_content"/>
        </TableRow>
     </TableLayout>

</LinearLayout>